Fix bugs from workshop, additional clarification

--- a/static/cube-models/2-data-modeling/model/cubes/orders.yml
+++ b/static/cube-models/2-data-modeling/model/cubes/orders.yml
@@ -26,7 +26,7 @@ cubes:
         primary_key: true
 
       - name: order_date
-        sql: o_orderdate::DATE
+        sql: o_orderdate
         type: time
 
       - name: status
