--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,9 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        working-directory: ./website
         run: npm ci
 
       - name: Build website
-        working-directory: ./website
         run: npm run build
 
       - name: Setup Pages
@@ -40,7 +38,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./website/build
+          path: ./build
 
   deploy:
     environment:
